# anland

./: CMakeLists.txt  keyboardedit.html
.github/workflows/: build.yml  build_apk.yml  build_daemon.yml
common/: protocol.h
consumers/anland_v5/android_consumer/app/: build.gradle
consumers/anland_v5/android_consumer/app/src/main/: AndroidManifest.xml
consumers/anland_v5/android_consumer/app/src/main/jni/: CMakeLists.txt  camera_service.c  camera_service.h  fd_helper.c  native_audio.c  native_audio.h  native_consumer.c
consumers/anland_v5/android_consumer/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
consumers/anland_v5/android_consumer/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
consumers/anland_v5/android_consumer/app/src/main/res/values/: strings.xml
consumers/anland_v5/android_consumer/app/src/main/res/values-zh/: strings.xml
consumers/anland_v5/android_consumer/app/src/main/res/values-zh-rTW/: strings.xml
consumers/anland_v5/android_consumer/app/src/main/res/xml/: accessibility_service_config.xml
daemon/: daemon.c
libdisplay_consumer/: display_consumer.c  display_consumer.h
libdisplay_daemon/: display_daemon.c  display_daemon.h
libdisplay_producer/: display_producer.c  display_producer.h
magisk_module/: customize.sh  service.sh
producers/kde/anland_backend_debian13_v5/src/backends/anland/: anland_backend.cpp  display_producer.c  display_producer.h  protocol.h
producers/kde/anland_backend_v5/src/backends/anland/: anland_backend.cpp
producers/kde/ubuntu2604_v5/: startup.sh
(+13 files in other folders)
